# codex-gateway-lite

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Codex Gateway Lite.cmd  Codex Gateway Lite.command  Codex Gateway Lite.ps1  LICENSE  README.md  SECURITY.md  build.rs  config.example.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: auth-image-bridge.md
docs/reviews/: 20260708-105803-history-native-schema-provider-claude-review.md  20260708-111938-history-full-restore-claude-review.md  20260708-114651-plan-ui-history-reseed-right-rail-claude-review.md  20260708-115511-plan-ui-history-final-claude-review.md  20260708-125057-plan-ui-active-seed-final-claude-review.md
scripts/: codex-auth-image-bridge.sh
src/: codex_lite.rs  main.rs  protocol_proxy.rs  trace.rs
src/ui/: index.html
